# gtest-demo

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
include/: math.h
src/: math.cpp
src/test/: math_test.cpp
